flutter/lib/ffi/neko_core.dart


    _start = _lib.lookupFunction<_start_t, int Function(int)>('neko_core_start');
    _stop = _lib.lookupFunction<_stop_t, int Function()>('neko_core_stop');
    _login = _lib.lookupFunction<_cmd_2s_t,
        int Function(Pointer<Utf8>, Pointer<Utf8>)>('neko_core_cmd_login');
    _register = _lib.lookupFunction<
        _cmd_4s_t,
        int Function(Pointer<Utf8>, Pointer<Utf8>, Pointer<Utf8>,
            Pointer<Utf8>)>('neko_core_cmd_register');
    _logout = _lib.lookupFunction<_cmd_0_t, int Function()>(
        'neko_core_cmd_logout');
    _changePassword = _lib.lookupFunction<
        _cmd_2s_t,
        int Function(Pointer<Utf8>, Pointer<Utf8>)>(
        'neko_core_cmd_change_password');
    _sendVerification = _lib.lookupFunction<
        _cmd_3s_t,
        int Function(Pointer<Utf8>, Pointer<Utf8>, Pointer<Utf8>)>(
        'neko_core_cmd_send_verification');
    _sliderChallenge = _lib.lookupFunction<_cmd_0_t, int Function()>(
        'neko_core_cmd_slider_challenge');
    _sliderVerify = _lib.lookupFunction<
        _cmd_1s_int_t,
        int Function(Pointer<Utf8>, int)>('neko_core_cmd_slider_verify');
    _sendResetCode = _lib.lookupFunction<
        _cmd_1s_t,
        int Function(Pointer<Utf8>)>('neko_core_cmd_send_reset_code');
    _resetPassword = _lib.lookupFunction<
        _cmd_3s_t,
        int Function(Pointer<Utf8>, Pointer<Utf8>, Pointer<Utf8>)>(
        'neko_core_cmd_reset_password');
    _vipPricing = _lib.lookupFunction<_cmd_0_t, int Function()>(
        'neko_core_cmd_vip_pricing');
    _vipPayCreate = _lib.lookupFunction<
        _cmd_i1s_t,
        int Function(int, Pointer<Utf8>)>('neko_core_cmd_vip_pay_create');
    _vipSyncStatus = _lib.lookupFunction<_cmd_0_t, int Function()>(
        'neko_core_cmd_vip_sync_status');
    _downloadMusic = _lib.lookupFunction<
        _cmd_music_t,
        int Function(Pointer<_NativeNekoCoreMusic>)>(
        'neko_core_cmd_download_music');
    _downloadCancel = _lib.lookupFunction<_cmd_int_t, int Function(int)>(
        'neko_core_cmd_download_cancel');
    _downloadsStatus = _lib.lookupFunction<_cmd_0_t, int Function()>(
        'neko_core_cmd_downloads_status');
    _fetchRanking = _lib.lookupFunction<_cmd_0_t, int Function()>(
        'neko_core_cmd_fetch_ranking');
    _fetchLatest = _lib.lookupFunction<_cmd_int_t, int Function(int)>(
        'neko_core_cmd_fetch_latest');
    _fetchDaily = _lib.lookupFunction<_cmd_0_t, int Function()>(
        'neko_core_cmd_fetch_daily');
    _searchMusic = _lib.lookupFunction<
        _cmd_3_t,
        int Function(Pointer<Utf8>, int, int)>('neko_core_cmd_search_music');
    _fetchMusicInfo = _lib.lookupFunction<_cmd_int_t, int Function(int)>(
        'neko_core_cmd_fetch_music_info');
    _fetchLyrics = _lib.lookupFunction<_cmd_int_t, int Function(int)>(
        'neko_core_cmd_fetch_lyrics');
    _fetchFavorites = _lib.lookupFunction<_cmd_0_t, int Function()>(
        'neko_core_cmd_fetch_favorites');
    _toggleFavorite = _lib.lookupFunction<_cmd_int_t, int Function(int)>(
        'neko_core_cmd_toggle_favorite');
    _queueLoad = _lib.lookupFunction<_cmd_0_t, int Function()>(
        'neko_core_cmd_queue_load');
    _queueClear = _lib.lookupFunction<_cmd_0_t, int Function()>(
        'neko_core_cmd_queue_clear');
    _queueAddAll = _lib.lookupFunction<
        _cmd_list_t,
        int Function(Pointer<_NativeNekoCoreMusic>, int)>(
        'neko_core_cmd_queue_add_all');
    _queueSetIndex = _lib.lookupFunction<_cmd_int_t, int Function(int)>(
        'neko_core_cmd_queue_set_index');
    _queueSetMode = _lib.lookupFunction<
        _cmd_1s_t,
        int Function(Pointer<Utf8>)>('neko_core_cmd_queue_set_mode');
    _lanStart = _lib.lookupFunction<_cmd_0_t, int Function()>(
        'neko_core_cmd_lan_start');
    _lanStop = _lib.lookupFunction<_cmd_0_t, int Function()>(
        'neko_core_cmd_lan_stop');
    _lanSelectDevice = _lib.lookupFunction<
        _cmd_1s_t,
        int Function(Pointer<Utf8>)>('neko_core_cmd_lan_select_device');
    _lanSetAccount = _lib.lookupFunction<_cmd_int_t, int Function(int)>(
        'neko_core_cmd_lan_set_account');
    _lanSetPlayerState = _lib.lookupFunction<_cmd_i2_t, int Function(int, int)>(
        'neko_core_cmd_lan_set_player_state');
    _lanPoll = _lib.lookupFunction<_cmd_0_t, int Function()>(
        'neko_core_cmd_lan_poll');
    _recentLoad = _lib.lookupFunction<_cmd_0_t, int Function()>(
        'neko_core_cmd_recent_load');
    _recordRecent = _lib.lookupFunction<
        _cmd_music_t,
        int Function(Pointer<_NativeNekoCoreMusic>)>(
        'neko_core_cmd_record_recent');
    _downloadsLoad = _lib.lookupFunction<_cmd_0_t, int Function()>(
        'neko_core_cmd_downloads_load');
    _recordDownload = _lib.lookupFunction<
        _cmd_music_path_t,
        int Function(Pointer<_NativeNekoCoreMusic>, Pointer<Utf8>)>(
        'neko_core_cmd_record_download');
    _createPlaylist = _lib.lookupFunction<
        _cmd_2s_t,
        int Function(Pointer<Utf8>, Pointer<Utf8>)>(
        'neko_core_cmd_playlist_create');
    _deletePlaylist = _lib.lookupFunction<_cmd_int_t, int Function(int)>(
        'neko_core_cmd_playlist_delete');
    _updatePlaylist = _lib.lookupFunction<
        _cmd_i2s_t,
        int Function(int, Pointer<Utf8>, Pointer<Utf8>)>(
        'neko_core_cmd_playlist_update');
    _loadPlaylists = _lib.lookupFunction<_cmd_0_t, int Function()>(
        'neko_core_cmd_playlist_list');
    _playlistDetail = _lib.lookupFunction<_cmd_int_t, int Function(int)>(
        'neko_core_cmd_playlist_detail');
    _playlistAddMusic = _lib.lookupFunction<
        _cmd_music_i_t,
        int Function(int, Pointer<_NativeNekoCoreMusic>)>(
        'neko_core_cmd_playlist_add_music');
    _playlistRemoveMusic = _lib.lookupFunction<_cmd_i2_t, int Function(int, int)>(
        'neko_core_cmd_playlist_remove_music');
    _fetchPlaylists = _lib.lookupFunction<
        _cmd_1s_t,
        int Function(Pointer<Utf8>)>('neko_core_cmd_fetch_playlists');
    _searchArtists = _lib.lookupFunction<
        _cmd_1s_t,
        int Function(Pointer<Utf8>)>('neko_core_cmd_search_artists');
    _fetchUserPlaylists = _lib.lookupFunction<_cmd_0_t, int Function()>(
        'neko_core_cmd_fetch_user_playlists');
    _fetchFavoritePlaylists = _lib.lookupFunction<_cmd_0_t, int Function()>(
        'neko_core_cmd_fetch_favorite_playlists');
    _fetchPlaylistMusic = _lib.lookupFunction<_cmd_int_t, int Function(int)>(
        'neko_core_cmd_fetch_playlist_music');
    _favoritePlaylist = _lib.lookupFunction<_cmd_int_t, int Function(int)>(
        'neko_core_cmd_favorite_playlist');
    _unfavoritePlaylist = _lib.lookupFunction<_cmd_int_t, int Function(int)>(
        'neko_core_cmd_unfavorite_playlist');
    _cloudCreatePlaylist = _lib.lookupFunction<
        _cmd_2s_t,
        int Function(Pointer<Utf8>, Pointer<Utf8>)>(
        'neko_core_cmd_cloud_playlist_create');
    _cloudDeletePlaylist = _lib.lookupFunction<_cmd_int_t, int Function(int)>(
        'neko_core_cmd_cloud_playlist_delete');
    _fetchNeteasePlaylist = _lib.lookupFunction<
        _cmd_1s_t,
        int Function(Pointer<Utf8>)>('neko_core_cmd_fetch_netease_playlist');
    _fetchQqPlaylist = _lib.lookupFunction<
        _cmd_1s_t,
        int Function(Pointer<Utf8>)>('neko_core_cmd_fetch_qq_playlist');
    _batchSearchMusic = _lib.lookupFunction<
        _cmd_1s_t,
        int Function(Pointer<Utf8>)>('neko_core_cmd_batch_search_music');
    _batchAddMusicToPlaylist = _lib.lookupFunction<
        _cmd_i1s_t,
        int Function(int, Pointer<Utf8>)>(
        'neko_core_cmd_batch_add_music_to_playlist');
    _getLoginState =
        _lib.lookupFunction<_get_state_t, int Function()>('neko_core_get_login_state');
    _getLoginInfo = _lib.lookupFunction<_get_str_t, int Function(Pointer<Utf8>, int)>(
        'neko_core_get_login_info');
    _audioHeaders = _lib.lookupFunction<_get_str_t, int Function(Pointer<Utf8>, int)>(
        'neko_core_audio_headers');
    _poll = _lib.lookupFunction<_poll_t, int Function(Pointer<_NativeNekoCoreResult>)>(
        'neko_core_poll');
    _setEventCb = _lib.lookupFunction<
        _set_core_event_cb_t,
        void Function(Pointer<Void>, Pointer<Void>)>(
        'neko_core_set_event_cb');
  }

  /// 启动 Qt 核心工作线程
  void start({bool verbose = false}) {
    final rc = _start(verbose ? 1 : 0);
    if (rc != 1) {
      throw StateError('neko_core_start failed ($rc)');
    }
  }

  void stop() => _stop();

  /// 注册结果推送回调（替代轮询）。传 null 取消。
  /// 回调可能从 worker 线程触发，宿主应在回调中尽快 poll 取走结果。
  void setEventCallback(Pointer<Void> cb) => _setEventCb(cb, nullptr);

  int login(String username, String password) {
    final u = username.toNativeUtf8();
    final p = password.toNativeUtf8();
    try {
      return _login(u, p);
    } finally {
      calloc.free(u);
      calloc.free(p);
    }
  }

  int register(String username, String password, String email, String code) {
    final u = username.toNativeUtf8();
    final p = password.toNativeUtf8();
    final e = email.toNativeUtf8();
    final c = code.toNativeUtf8();
    try {
      return _register(u, p, e, c);
    } finally {
      calloc.free(u);
      calloc.free(p);
      calloc.free(e);
      calloc.free(c);
    }
  }

  int logout() => _logout();

  int changePassword(String oldPassword, String newPassword) {
    final o = oldPassword.toNativeUtf8();
    final n = newPassword.toNativeUtf8();
    try {
      return _changePassword(o, n);
    } finally {
      calloc.free(o);
      calloc.free(n);
    }
  }

  int sendVerification(String email, String username, String captchaPassToken) {
    final e = email.toNativeUtf8();
    final u = username.toNativeUtf8();
    final t = captchaPassToken.toNativeUtf8();
    try {
      return _sendVerification(e, u, t);
    } finally {
      calloc.free(e);
      calloc.free(u);
      calloc.free(t);
    }
  }

  int sliderChallenge() => _sliderChallenge();

  int sliderVerify(String captchaToken, int offsetX) {
    final t = captchaToken.toNativeUtf8();
    try {
      return _sliderVerify(t, offsetX);
    } finally {
      calloc.free(t);
    }
  }

  int sendResetCode(String email) {
    final e = email.toNativeUtf8();
    try {
      return _sendResetCode(e);
    } finally {
      calloc.free(e);
    }
  }

  int resetPassword(String email, String code, String newPassword) {
    final e = email.toNativeUtf8();
    final c = code.toNativeUtf8();
    final n = newPassword.toNativeUtf8();
    try {
      return _resetPassword(e, c, n);
    } finally {
      calloc.free(e);
      calloc.free(c);
      calloc.free(n);
    }
  }

  // ── 会员中心 ──

  int vipPricing() => _vipPricing();

  int vipPayCreate(int pricingId, {String payType = 'alipay'}) {
    final p = payType.toNativeUtf8();
    try {
      return _vipPayCreate(pricingId, p);
    } finally {
      calloc.free(p);
    }
  }

  int vipSyncStatus() => _vipSyncStatus();

  // ── 下载管理 ──

  int downloadMusic(NekoCoreMusic music) {
    final ptr = calloc<_NativeNekoCoreMusic>();
    try {
      music.toNative(ptr);
      return _downloadMusic(ptr);
    } finally {
      calloc.free(ptr);
    }
  }

  int downloadCancel(int musicId) => _downloadCancel(musicId);
  int downloadsStatus() => _downloadsStatus();
  int fetchRanking() => _fetchRanking();
  int fetchLatest(int limit) => _fetchLatest(limit);
  int fetchDaily() => _fetchDaily();

  int searchMusic(String query, {int page = 1, int pageSize = 20}) {
    final q = query.toNativeUtf8();
    try {
      return _searchMusic(q, page, pageSize);
    } finally {
      calloc.free(q);
    }
  }

  int fetchMusicInfo(int musicId) => _fetchMusicInfo(musicId);
  int fetchLyrics(int musicId) => _fetchLyrics(musicId);
  int fetchFavorites() => _fetchFavorites();
  int toggleFavorite(int musicId) => _toggleFavorite(musicId);
  int queueLoad() => _queueLoad();
  int queueClear() => _queueClear();
